--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Activity</string>
+    <string name="btn">Button</string>
+    <string name="second">Second Activity</string>
+    <string name="goBack">goBack</string>
 </resources>
